# worldbuild-mcp

./: .gitignore  PROJECT_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/worldbuild_core/: __init__.py  default_schema.yaml  entities.py  index.py  models.py  schema.py  vault.py
src/worldbuild_mcp/: __init__.py
tests/: test_core_entities.py  test_core_index.py  test_core_schema.py  test_core_vault.py  test_smoke.py
