[project]
name = "worldbuild-mcp"
version = "0.1.0"
description = "A schema-driven Model Context Protocol (MCP) server that turns an Obsidian vault into a queryable, self-validating worldbuilding database for TTRPGs (D&D), game settings, and novels."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["fastmcp", "pyyaml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worldbuild_core", "src/worldbuild_mcp"]

[dependency-groups]
dev = ["pytest", "ruff", "mypy", "types-PyYAML"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]